[tool.poetry]
name = "pyzonnestand"
version = "0.1.0"
description = "Vectorised sun position calculations"
authors = ["markkvdb <github@mvanderbroek.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^7.4.4"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
