[tool.poetry]
name = "pyzonnestand"
version = "0.1.0"
description = "Vectorised sun position calculations"
authors = ["markkvdb <github@mvanderbroek.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^7.4.4"
ruff = "^0.1.14"
ipykernel = "^6.29.0"
matplotlib = "^3.8.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
